--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               {
                 "input": "src/theme.scss"
               },
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
